# ai-data-analyst-agents

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  runcom.md
ai_data_analyst_agents/agents/: eda.py  intake.py  metrics.py  next_steps.py  planner.py  profiling.py  quality.py  reporting.py  reviewer.py  scorecard.py  wrangling.py
ai_data_analyst_agents/core/: agent_base.py  artifacts.py  contracts.py  (+14 more)
app/: .gitignore  postgres_auth.py  run_tracking.py  streamlit_app.py
benchmarks/: core_quality_suite.yaml
configs/: rules.yaml  settings.yaml
data/: ab_conversion_demo.csv  local_auth.db  mean_comparison_demo.csv  regression_demo.csv  sample_ecommerce.db  sample_ecommerce_data.csv  sample_ecommerce_star.db
tests/: __init__.py  conftest.py  helpers.py  test_contracts_and_scorecard.py  test_eda_agent.py  test_evaluation_harness.py  test_intake_and_profiling_agents.py  test_local_auth.py  test_message_schema.py  test_metric_engine_and_templates.py  test_metrics_agent_phase3.py  test_metrics_agent_phase4.py  test_metrics_edge_cases_additional.py  test_next_steps_agent.py  test_openrouter_client_additional.py  test_orchestrator_and_messages.py  test_pipeline_csv_e2e.py  test_pipeline_sql_e2e.py  test_planner.py  test_quality_and_profiling.py  test_quality_and_reporting_agents_stage.py  test_reporting_helpers_additional.py  test_reviewer_and_evidence.py  test_run_tracking.py  test_security_guards.py  test_sql_failure_paths_additional.py  test_sql_source.py  test_statistics_phase4.py  test_streamlit_auth_ui.py  test_wrangling_and_memory.py
(+20 files in other folders)
