[project]
name = "ai-data-analyst-agents"
version = "0.1.0"
description = "Multi-agent analytics pipeline (Phase 1: CSV -> artifacts -> report)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "matplotlib>=3.8.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "pyyaml>=6.0.1",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1.18",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_data_analyst_agents*"]

[tool.ruff]
line-length = 100
